add thumbnail test

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -91,7 +91,7 @@
 
   -if COMPONENTS_DEV_MODE
     <script type="module">
-      import '../out-tsc/temba-modules.js';
+      import '/out-tsc/temba-modules.js';
     </script>
   -else 
     -include "components-body.html"
