--- a/templates/msgs/broadcast_scheduled.haml
+++ b/templates/msgs/broadcast_scheduled.haml
@@ -9,8 +9,10 @@
 -block extra-style
   {{block.super}}
   :css
+
     .broadcast-item .broadcast:hover {
       cursor: pointer;
+      box-shadow: 0 0 0 2px var(--color-focus);
     }
 
 
