Fix flow export button height

--- a/templates/orgs/org_export.haml
+++ b/templates/orgs/org_export.haml
@@ -85,7 +85,7 @@
         .button-light.select-all
           -trans "Select All"
 
-        .ml-4.button-primary.submit
+        .ml-4.button-primary.submit{style:"height: 100%;"}
           -trans "Export"
 
 
