Remove use of setValue status selection

--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -176,7 +176,7 @@
 
         // whenever our menu changes, reset filter
         if (statusSelect) {
-          statusSelect.setValue("open");
+          statusSelect.value = "open";
           status = "open";
           folder = menuItem.id;
           updateTicketList();
