--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -229,10 +229,10 @@
       }
     }
 
-    function handleStatusFilterChanged(e) {
+    function handleStatusFilterChanged(event) {
       ticketUUID = null;
       focusNext = null;
-      status = event.target.values[0].value
+      status = event.target.value
       updateTicketList();
     }
 
